tests/snapshots/regression_test__tests__short_python_true.snap
---
source: tests/regression_test.rs
expression: diff_hunks
---
RichHunks(
    [
        New(
            Hunk(
                [
                    Line {
                        line_index: 1,
                        entries: [
                            Entry {
                                reference: {Node string_start (1, 4) - (1, 7)},
                                text: "\"",
                                start_position: Point {
                                    row: 1,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 1,
                                    column: 5,
                                },
                                kind_id: 103,
                            },
                            Entry {
                                reference: {Node string_start (1, 4) - (1, 7)},
                                text: "\"",
                                start_position: Point {
                                    row: 1,
                                    column: 5,
                                },
                                end_position: Point {
                                    row: 1,
                                    column: 6,
                                },
                                kind_id: 103,
                            },
                            Entry {
                                reference: {Node string_start (1, 4) - (1, 7)},
                                text: "\"",
                                start_position: Point {
                                    row: 1,
                                    column: 6,
                                },
                                end_position: Point {
                                    row: 1,
                                    column: 7,
                                },
                                kind_id: 103,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: " ",
                                start_position: Point {
                                    row: 1,
                                    column: 7,
                                },
                                end_position: Point {
                                    row: 1,
                                    column: 8,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: "H",
                                start_position: Point {
                                    row: 1,
                                    column: 8,
                                },
                                end_position: Point {
                                    row: 1,
                                    column: 9,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: "e",
                                start_position: Point {
                                    row: 1,
                                    column: 9,
                                },
                                end_position: Point {
                                    row: 1,
                                    column: 10,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: "l",
                                start_position: Point {
                                    row: 1,
                                    column: 10,
                                },
                                end_position: Point {
                                    row: 1,
                                    column: 11,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: "l",
                                start_position: Point {
                                    row: 1,
                                    column: 11,
                                },
                                end_position: Point {
                                    row: 1,
                                    column: 12,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: "o",
                                start_position: Point {
                                    row: 1,
                                    column: 12,
                                },
                                end_position: Point {
                                    row: 1,
                                    column: 13,
                                },
                                kind_id: 210,
                            },
                        ],
                    },
                    Line {
                        line_index: 2,
                        entries: [
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: " ",
                                start_position: Point {
                                    row: 2,
                                    column: 0,
                                },
                                end_position: Point {
                                    row: 2,
                                    column: 1,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: " ",
                                start_position: Point {
                                    row: 2,
                                    column: 1,
                                },
                                end_position: Point {
                                    row: 2,
                                    column: 2,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: " ",
                                start_position: Point {
                                    row: 2,
                                    column: 2,
                                },
                                end_position: Point {
                                    row: 2,
                                    column: 3,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: " ",
                                start_position: Point {
                                    row: 2,
                                    column: 3,
                                },
                                end_position: Point {
                                    row: 2,
                                    column: 4,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: "w",
                                start_position: Point {
                                    row: 2,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 2,
                                    column: 5,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: "o",
                                start_position: Point {
                                    row: 2,
                                    column: 5,
                                },
                                end_position: Point {
                                    row: 2,
                                    column: 6,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: "r",
                                start_position: Point {
                                    row: 2,
                                    column: 6,
                                },
                                end_position: Point {
                                    row: 2,
                                    column: 7,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: "l",
                                start_position: Point {
                                    row: 2,
                                    column: 7,
                                },
                                end_position: Point {
                                    row: 2,
                                    column: 8,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: "d",
                                start_position: Point {
                                    row: 2,
                                    column: 8,
                                },
                                end_position: Point {
                                    row: 2,
                                    column: 9,
                                },
                                kind_id: 210,
                            },
                        ],
                    },
                    Line {
                        line_index: 3,
                        entries: [
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: " ",
                                start_position: Point {
                                    row: 3,
                                    column: 0,
                                },
                                end_position: Point {
                                    row: 3,
                                    column: 1,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: " ",
                                start_position: Point {
                                    row: 3,
                                    column: 1,
                                },
                                end_position: Point {
                                    row: 3,
                                    column: 2,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: " ",
                                start_position: Point {
                                    row: 3,
                                    column: 2,
                                },
                                end_position: Point {
                                    row: 3,
                                    column: 3,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_content (1, 7) - (3, 4)},
                                text: " ",
                                start_position: Point {
                                    row: 3,
                                    column: 3,
                                },
                                end_position: Point {
                                    row: 3,
                                    column: 4,
                                },
                                kind_id: 210,
                            },
                            Entry {
                                reference: {Node string_end (3, 4) - (3, 7)},
                                text: "\"",
                                start_position: Point {
                                    row: 3,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 3,
                                    column: 5,
                                },
                                kind_id: 105,
                            },
                            Entry {
                                reference: {Node string_end (3, 4) - (3, 7)},
                                text: "\"",
                                start_position: Point {
                                    row: 3,
                                    column: 5,
                                },
                                end_position: Point {
                                    row: 3,
                                    column: 6,
                                },
                                kind_id: 105,
                            },
                            Entry {
                                reference: {Node string_end (3, 4) - (3, 7)},
                                text: "\"",
                                start_position: Point {
                                    row: 3,
                                    column: 6,
                                },
                                end_position: Point {
                                    row: 3,
                                    column: 7,
                                },
                                kind_id: 105,
                            },
                        ],
                    },
                ],
            ),
        ),
        New(
            Hunk(
                [
                    Line {
                        line_index: 6,
                        entries: [
                            Entry {
                                reference: {Node identifier (6, 4) - (6, 5)},
                                text: "x",
                                start_position: Point {
                                    row: 6,
                                    column: 4,
                                },
                                end_position: Point {
                                    row: 6,
                                    column: 5,
                                },
                                kind_id: 1,
                            },
                            Entry {
                                reference: {Node = (6, 10) - (6, 11)},
                                text: "=",
                                start_position: Point {
                                    row: 6,
                                    column: 10,
                                },
                                end_position: Point {
                                    row: 6,
                                    column: 11,
                                },
                                kind_id: 47,
                            },
                            Entry {
                                reference: {Node integer (6, 12) - (6, 13)},
                                text: "1",
                                start_position: Point {
                                    row: 6,
                                    column: 12,
                                },
                                end_position: Point {
                                    row: 6,
                                    column: 13,
                                },
                                kind_id: 92,
                            },
                        ],
                    },
                ],
            ),
        ),
    ],
)
