tests/snapshots/regression_test__tests__short_rust_split_graphemes_true_strip_whitespace_true.snap
---
source: tests/regression_test.rs
expression: snapshot_string
---
New(Line={line_index=9, entries=
[
    Entry{'}', start=(9, 0), end=(9, 1)}
]}
)
New(Line={line_index=11, entries=
[
    Entry{'f', start=(11, 0), end=(11, 1)}
    Entry{'n', start=(11, 1), end=(11, 2)}
    Entry{'a', start=(11, 3), end=(11, 4)}
    Entry{'d', start=(11, 4), end=(11, 5)}
    Entry{'d', start=(11, 5), end=(11, 6)}
    Entry{'i', start=(11, 6), end=(11, 7)}
    Entry{'t', start=(11, 7), end=(11, 8)}
    Entry{'i', start=(11, 8), end=(11, 9)}
    Entry{'o', start=(11, 9), end=(11, 10)}
    Entry{'n', start=(11, 10), end=(11, 11)}
    Entry{'(', start=(11, 11), end=(11, 12)}
    Entry{')', start=(11, 12), end=(11, 13)}
    Entry{'{', start=(11, 14), end=(11, 15)}
]}
)
Old(Line={line_index=1, entries=
[
    Entry{'l', start=(1, 4), end=(1, 5)}
    Entry{'e', start=(1, 5), end=(1, 6)}
    Entry{'t', start=(1, 6), end=(1, 7)}
    Entry{'x', start=(1, 8), end=(1, 9)}
    Entry{'=', start=(1, 10), end=(1, 11)}
    Entry{'1', start=(1, 12), end=(1, 13)}
    Entry{';', start=(1, 13), end=(1, 14)}
]}
)
New(Line={line_index=14, entries=
[
    Entry{'t', start=(14, 7), end=(14, 8)}
    Entry{'w', start=(14, 8), end=(14, 9)}
    Entry{'(', start=(14, 10), end=(14, 11)}
    Entry{')', start=(14, 11), end=(14, 12)}
]}
)
Old(Line={line_index=4, entries=
[
    Entry{'n', start=(4, 8), end=(4, 9)}
    Entry{'e', start=(4, 9), end=(4, 10)}
]}
)
